# AHA

./: .gitignore  Cargo.toml  README.en.md  README.md  build.rs  install.sh  start.sh
assets/dashboard/: index.html
assets/dashboard/assets/: index-B2d2Y6Kd.css  index-BYHyLNb9.js  index-BrEM7Qld.js  index-CZE6t5kW.js  index-D2Gz4Bma.js  index-egqT9LCu.js  index-u5JYITco.css
docs/plans/: 2026-07-14-web-phase-2.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  styles.css
kitty-ah/: ah-kitty.sh
raycast-ah/: CHANGELOG.md  package-lock.json  package.json  raycast-env.d.ts  tsconfig.json
raycast-ah/src/: ah.ts  explain-input.tsx  explain-selected.tsx
scripts/: setup-hotkey.sh  test-daemon.sh
scripts/homebrew/: ah.rb
searxng/core-config/: limiter.toml  settings.yml
src/: cli.rs  config.rs  context.rs  daemon.rs  error.rs  explain.rs  filter.rs  grab.rs  history.rs  main.rs  notify_guard.rs  render.rs  search.rs  selection.rs  tui.rs  web.rs
src/providers/: mock.rs  mod.rs  ollama.rs  openai.rs
tmux-ah/: ah.tmux
vim-ah/plugin/: ah.vim
wezterm-ah/: wezterm-ah.lua
