[package]
name = "ah"
version = "0.1.0"
edition = "2021"
description = "Terminal translate & explain — select a word, get translation + AI explanation"

[dependencies]
async-trait = "0.1"
clap = { version = "4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dirs = "5"
colored = "2"
thiserror = "1"
anyhow = "1"
textwrap = "0.16"
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = "0.4"
arboard = "3"
notify-rust = "4"
ctrlc = "3"
ratatui = "0.26"
crossterm = "0.27"
unicode-width = "0.1"
parking_lot = "0.12"
lru = "0.12"
libc = "0.2"
axum = "0.7"
rust-embed = "8"
futures-util = "0.3.32"
